# pebble

./: .env.example  .mise.toml  Cargo.toml  Taskfile.yml  docker-compose.yaml
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: args.rs  config.rs  error.rs  lib.rs  utils.rs
server/src/handlers/: health.rs  mod.rs  root.rs
server/src/handlers/com_atproto/identity/: resolve_handle.rs
server/src/handlers/well_known/: did.rs
