[package]
name = "pebble-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atrium-api = { version = "0.25.4", default-features = false }
aws-config = "1.8.0"
aws-sdk-s3 = "1.93.0"
axum = { version = "0.8.4", features = ["macros"] }
clap = { workspace = true, features = ["derive", "env"] }
fred = { version = "10.1.0", features = ["enable-rustls"] }
hickory-resolver = "0.25.2"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.1"
tracing = "0.1.41"
url = "2.5.4"
